tests/fsharp/typecheck/sigs/neg93.bsl

neg93.fs(8,19,8,22): typecheck error FS3187: Type inference caused the type variable TError to escape its scope. Consider adding an explicit type parameter declaration or adjusting your code to be less generic.

neg93.fs(17,17,17,20): typecheck error FS3187: Type inference caused the type variable TError to escape its scope. Consider adding an explicit type parameter declaration or adjusting your code to be less generic.

neg93.fs(21,10,21,13): typecheck error FS3188: Type inference caused an inference type variable to escape its scope. Consider adding type annotations to make your code less generic.
